# EnergyBot_RAG

./: .gitignore  DOCS_TECH.md  Dockerfile  README.md  README_LV.md  benchmark.py  benchmark_results_final.csv  engine.py  inspect_db.py  main_ui.py  pyproject.toml  test_rag_cases.py  test_rag_connection.py  test_results_audit.csv
