[project]
name = "energybot-rag"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "chromadb>=1.3.7",
    "docling>=2.65.0",
    "docling-core>=2.57.0",
    "llama-index>=0.14.10",
    "llama-index-embeddings-huggingface>=0.6.1",
    "llama-index-llms-ollama>=0.9.1",
    "llama-index-node-parser-docling>=0.4.2",
    "llama-index-readers-docling>=0.4.2",
    "llama-index-vector-stores-chroma>=0.5.3",
    "python-dotenv>=1.2.1",
    "streamlit>=1.52.2",
]
